# Sample-Data-Generator

./: .gitignore  Blobs.md  Dockerfile  README.md  README2.md  blob_image_data.al  data_generator.py  data_generator.sh  data_generator_blobs.py  data_generator_cv2_livefeed.py  data_generator_deeptector.py  data_generator_file_processing.py  data_generator_generic.py  data_generator_generic2.py  data_generator_generic_blobs.py  data_generator_generic_old.py  data_generator_generic_power_blockchain_coordinates.py  data_generator_images.py  data_generator_traffic_data.py  data_generator_video_image_processing.py  data_generator_videos.py  deeptector.json  deeptector.py  docker_call.sh  dummy_deeptector.py  dynics.py  edgex_bug.py  edgex_demo.py  faisal_code.py  file_post_basic.py  file_processing.py  flexnode_data.json  from_file.py  ibm_demo.al  insert_test.py  linode.py  live_image_feed.py  machine_info.py  map_data.py  mqtt_publisher_protocol.py  (+21 more)
anylog_scripts/: data_generator_deeptector.al  data_generator_file_processing.al  data_generator_generic.al  data_generator_generic_rest.al  nvidia_mqtt_client.al
archive/: anylog_insight.py  data_generator_cv2_livefeed.py  data_generator_generic_old.py  data_generator_traffic_data.py  mqtt_policy.al   pyshark_README.md  sample_pyshark.py  traffic_insight_full.py  traffic_insight_full_file.py  transit_data.py
bash_scripts/: print_data.sh  rest_post_data.sh  rest_put_data.sh  send_mqtt_data.sh  store_data_file.sh
blobs/: factory_images.json  image_data.json
camera/: camera_action.py  people_tracker.py
ml_ai/: main.py  (+1 more)
(+461 files in other folders)
