[metadata]
name = sample-data-generator
version = 1.3.2401
author = AnyLog Co.
contact = info@anylog.co
description = AnyLog Sample Data Generator
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co/Sample-Data-Generator

;[options]
;packages = find:s
